
syntax = "proto3";
package goshare;

import "goshare/common.proto";
import "goshare/market_data.proto";
import "goshare/strategy.proto";
option go_package = "github.com/mineralres/goshare/pkg/pb/goshare";

// GoShare goshare
service GoShare {
  // SSEStockOptionList 上证所期权列表
  rpc SSEStockOptionList(ReqSSEStockOptionList)
      returns (RspSSEStockOptionList) {};
  // SubscribeMarketData 订阅行情
  rpc SubscribeMarketData(ReqSubscribeMarketData)
      returns (stream MarketDataSnapshot) {};
  // PushTick 推送tick更新
  rpc PushTick(MarketDataSnapshot) returns (EmptyResponse) {};
  // 策略列表
  rpc GetStrategyList(EmptyRequest) returns (StrategyList) {};
  // 查询策略
  rpc GetStrategy(ReqGetStrategy) returns (Strategy) {};
  // 创建策略
  rpc CreateStrategy(Strategy) returns (EmptyResponse) {};
  // 删除策略
  rpc DeleteStrategy(ReqDeleteStrategy) returns (EmptyResponse) {};
}

message ReqSSEStockOptionList {}
message RspSSEStockOptionList { repeated SSEStockOption list = 1; }
